Correct spacing css

--- a/forums/static/forums/css/forum.scss
+++ b/forums/static/forums/css/forum.scss
@@ -582,7 +582,7 @@ body{
     border-radius: $container-border-radius;
   }
 }
-.nav-pills > li > span {
+.nav-pills > li > a > span {
   margin-right: 5px;
 }
 
